2004-09-17  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/det.cc (Fdet): Only compute estimate of the
	condition number if requested as output.

	* DLD-FUNCTIONS/schur.cc (Fschur): Only compute unitary matrix if
	requested as output.

2004-09-17  John W. Eaton  <jwe@octave.org>

	* ov-fcn-inline.cc (octave_fcn_inline::octave_fcn_inline):
	Call eval_string instead of feval ("eval", ...).
	Construct anonymous function handle to avoid going through the
	symbol table.

	* ov-fcn-handle.h (octave_fcn_handle::fcn_val): New function.
	(octave_fcn_handle::octave_fcn_handle (const std:string&)):
	New constructor.

2004-09-16  John W. Eaton  <jwe@octave.org>

	* parse.y (frob_function): Clear id_name from curr_sym_tab, not
	top_level_sym_tab.

	* symtab.cc (maybe_list): Count sizes using size_t, not int.

	* variables.cc (symbol_out_of_date): Always look in LOADPATH.

2004-09-15  John W. Eaton  <jwe@octave.org>

	* OPERATORS/op-int-conv.cc: Define and install bool to int
	conversions.
	* OPERATORS/op-double-conv.cc: Define and install bool to double
	conversions.

	* ov.cc (octave_value::assign): Handle subsref for containers.
	* oct-lvalue.cc (octave_lvale::value): Likewise.

	* DLD-FUNCTIONS/sort.cc (mx_sort): Return octave_value, not
	octave_value list.

2004-09-15  David Bateman  <dbateman@free.fr>

	* ov.cc (octave_value::octave_value (const ArrayN<char>&, bool)):
	New Constructor .
	* ov.h: Provide decl.

	* DLD-FUNCTIONS/sort.cc (sortmode): New enum to define sort direction.
	(template <class T> class vec_index): New class to contain values and
	index for indexed sorts, replacing all previous struct versions. 
	Instantiate for double, Complex, char and octave_value.
	(template <class T> static octave_value_list mx_sort (ArrayN<T> &, int,
	sortmode)): New templated version of mx_sort replacing all previous
	versions, but specific to non indexed sorts. Instantiate for char
	and double if not IEEE754.